fixed text alignment in shows section. fixed responsiveness for small screens

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 header {
@@ -299,7 +300,7 @@ footer .fa-brands:hover {
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
     background-color: rgba(0, 0, 0, 0.8);
     justify-content: center;
     align-items: center;
